--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -5,7 +5,8 @@
             <h2>
                 Forgot Password
             </h2>
-            
+        
+        <%- include ("./messages") %>
             <form action="/users/forgot" method="POST">
                 <div class="form-group">
                     <label for="email">Email</label>
