--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,8 @@
             <h2>
                 Login
             </h2>
-           
+        
+        <%- include ("./messages") %>
             <form action="/users/login" method="POST">
                 <div class="form-group">
                     <label for="email">Email</label>
