--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,8 @@
         <h2>
           Create Your Account
         </h2>
-       
+      
+      <%- include ("./messages") %>
         <form action="/users/register" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
